--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,9 @@ spring.application.name=cateringboys
 server.port=8080
 
 
-spring.datasource.url=jdbc:mysql://localhost:3306/cateringboys
+spring.datasource.url=jdbc:mysql://mysql.railway.internal:3306/railway
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=DaXIunAUtuZKFcwItlbusONKRynvVrAg
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
