Use environment variables for datasource configuration
Replaced hardcoded datasource properties with environment variables.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,13 @@
-spring.application.name=cateringboys
-
-
-server.port=8080
-
-
-spring.datasource.url=jdbc:mysql://mysql.railway.internal:3306/railway
-spring.datasource.username=root
-spring.datasource.password=DaXIunAUtuZKFcwItlbusONKRynvVrAg
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+# Optional: explicitly set dialect (helps when metadata can't be queried during startup)
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+# For dev: let Hibernate create/update tables (use migrations for prod)
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
 
